welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:13: error: type mismatch;
 found   : Unit
 required: Int
  if (min < 10 || min > 20) {
  ^